partman-base (113) UNRELEASED; urgency=low

  * Revert support for erasing encrypted LVM volumes introduced in (106).
    There are too many problems with it and starting fresh seems better
    than stacking change on change to fix it.

 -- Frans Pop <fjp@debian.org>  Tue, 04 Dec 2007 11:51:18 +0100

partman-base (112) unstable; urgency=low

  * Add support for the Orion (ARM) platform.

 -- Martin Michlmayr <tbm@cyrius.com>  Thu, 29 Nov 2007 09:19:46 +0100

partman-base (111) unstable; urgency=low

  * init.d/umount-target: also unmount /dev/.static/dev/ which may have
    /target/dev/ mounted on it by base-installer (>= 1.85).

  [ Updated translations ]
  * Belarusian (be.po) by Hleb Rubanau
  * German (de.po) by Jens Seidel
  * Esperanto (eo.po) by Serge Leblanc
  * Korean (ko.po) by Sunjae Park
  * Norwegian Bokmål (nb.po) by Hans Fredrik Nordhaug
  * Romanian (ro.po) by Eddy Petrișor

 -- Frans Pop <fjp@debian.org>  Mon, 19 Nov 2007 11:44:31 +0100

partman-base (110) unstable; urgency=low

  [ Colin Watson ]
  * Resolve symlinks before looking up devices in /proc/swaps.
  * Minor read_list optimisation using a ${parameter:+word} expansion.
  * Optimise humandev cciss handling a little, fixing a shell syntax error
    along the way that created a file called "15" rather than checking
    whether $lun was greater than 15.
  * Use 'mkdir -p' rather than more awkward test-then-create constructions.
  * If devices are passed as command-line arguments to parted_devices,
    iterate over them rather than over the list of devices probed by
    libparted. This can be useful to support devices that libparted would
    not normally probe automatically, such as loop devices. (Read-only
    devices, CDs, and floppies are still skipped.)
  * Use expr rather than shell arithmetic in human2longint, to avoid relying
    on 64-bit shell arithmetic.
  * Use MS-DOS label by default on Cell platforms.

  [ Anton Zinoviev ]