@@ -1,8 +1,13 @@
 partman-base (113) UNRELEASED; urgency=low
 
+  [ Frans Pop ]
   * Revert support for erasing encrypted LVM volumes introduced in (106).
     There are too many problems with it and starting fresh seems better
     than stacking change on change to fix it.
+
+  [ Max Vozeler ]
+  * definitions.sh: Provide commit_changes for other partman 
+    packages to use when they need to commit pending changes to disk.
 
  -- Frans Pop <fjp@debian.org>  Tue, 04 Dec 2007 11:51:18 +0100
 
